--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,17 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^13.13.5",
+        "serverless": "^1.70.1",
+        "serverless-offline": "^6.1.5",
+        "serverless-plugin-typescript": "^1.1.9",
         "ts-node": "^8.10.1",
         "typescript": "^3.8.3"
     },
     "dependencies": {
+        "@types/aws-lambda": "^8.10.51",
         "@types/form-data": "^2.5.0",
         "@types/qs": "^6.9.2",
+        "aws-lambda": "^1.0.6",
         "axios": "^0.19.2",
         "form-data": "^3.0.0",
         "node-html-parser": "^1.2.16",
