change: 메모리 사용량과 시간제한을 명시적으로 표기

--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -5,6 +5,8 @@ provider:
     name: aws
     stage: dev
     region: ap-northeast-2
+    memorySize: 128
+    timeout: 10
 
 functions:
     collect:
