add: dotenv, serverless-dotenv-plugin

--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -26,5 +26,6 @@ functions:
                   cors: false
 
 plugins:
+    - serverless-dotenv-plugin
     - serverless-plugin-typescript
     - serverless-offline
