--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,13 @@
         "@types/qs": "^6.9.2",
         "aws-lambda": "^1.0.6",
         "axios": "^0.19.2",
+        "dotenv": "^8.2.0",
         "form-data": "^3.0.0",
         "moment-timezone": "^0.5.28",
         "node-html-parser": "^1.2.16",
         "prompts": "^2.3.2",
         "qs": "^6.9.4",
+        "serverless-dotenv-plugin": "^2.4.2",
         "tistory-js": "^1.14.10",
         "yargs": "^15.3.1"
     }
